added inviewport library

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,34 +1,36 @@
 <div id="about" class="container">
-    <div class="introBox">
-        <img src="assets/img/myimg2.jpg">
-        <div>
+    <div class="introBox" snInViewport>
+        <img src="assets/img/myimg2.jpg" class="introImg" snInViewport>
+        <div class="introText" snInViewport>
             <h2>About Me</h2>
-            <p>I am 32 years old and are managing my own Taxi Limousineservice based in Munich. After the pandemic
-                affected so strong into my Life I did decide to go back to my roots in IT. Over the last year i built a
-                variety of Front-End projects from simple website to complex web apps. Now I'm looking for new
+            <p>I am 32 years old and am managing my own Taxi Limousine service based in Munich. After the pandemic
+                affected so strongly in my Life, I did decide to go back to my roots in IT. Over the last year, I built
+                a
+                variety of Front-End projects from simple websites to complex web apps. Now I'm looking for new
                 challenges in Front-End-Web development.</p>
         </div>
     </div>
     <div class="storySection">
-        <div class="storyPart">
+        <div class="storyPart" snInViewport>
             <img src="assets/img/walk-line.png">
-            <h3>...</h3>
-            <p>...</p>
+            <h3>#1 Start in the IT</h3>
+            <p>In my apprenticeship as an information electronics technician, I gained a lot of experience in terms of
+                hardware and software.</p>
         </div>
-        <div class="storyPart">
+        <div class="storyPart" snInViewport>
             <img src="assets/img/heart-line.png">
-            <h3>...</h3>
-            <p>...</p>
+            <h3>2# Organized and Structured Work flow</h3>
+            <p>As an entrepreneur, I have gained experience in organized, structured, and self-reliant work.</p>
         </div>
-        <div class="storyPart">
+        <div class="storyPart" snInViewport>
             <img src="assets/img/search-line.png">
-            <h3>...</h3>
-            <p>...</p>
+            <h3>3# Project experience</h3>
+            <p>You can find everything from simple landing pages to complex web applications in my portfolio.</p>
         </div>
-        <div class="storyPart">
+        <div class="storyPart" snInViewport>
             <img src="assets/img/flight-takeoff-line.png">
-            <h3>...</h3>
-            <p>...</p>
+            <h3>4# The next Challenge</h3>
+            <p>I'm looking forward to contribute my knowledge of Javascript and Angular to your next project.</p>
         </div>
     </div>
 </div>
