--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -8,21 +8,31 @@
 .storySection {
     padding-top: 50px;
     display: flex;
-    .storyPart {
-        width: 25%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-left: 10px;
-        margin-right: 10px;
-        img {
-            width: 40px;
-            padding: 16px;
-            background-color: #2dfcd8;
-            border-radius: 50%;
-        }
+}
+
+.storyPart {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: transform 0.35s ease-out;
+    img {
+        width: 40px;
+        padding: 16px;
+        background-color: #2dfcd8;
+        border-radius: 50%;
     }
+}
+
+.storyPart.sn-viewport--in {
+    animation: showAnimation 225ms ease-in;
+}
+
+.storyPart.sn-viewport--out {
+    opacity: 0;
 }
 
 .introBox {
@@ -32,6 +42,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     border-bottom: 1px solid #2dfcd8;
+
     div {
         text-align: center;
         margin-left: 16px;
@@ -45,6 +56,30 @@
         border-radius: 50%;
         margin-right: 16px;
     }
+}
+
+.introText {
+    transition: transform 0.35s ease-out;
+}
+
+.introText.sn-viewport--in {
+    animation: showAnimation 225ms ease-in;
+}
+
+.introText.sn-viewport--out {
+    opacity: 0;
+}
+
+.introImg {
+    transition: transform 0.35s ease-out;
+}
+
+.introImg.sn-viewport--in {
+    animation: showAnimation 225ms ease-in;
+}
+
+.introImg.sn-viewport--out {
+    opacity: 0;
 }
 
 @media (max-width: 800px) {
@@ -71,8 +106,8 @@
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
-        .storyPart {
-            width: 100% !important;
-        }
+    }
+    .storyPart {
+        width: 100% !important;
     }
 }
