--- a/src/app/projects-javascript/projects-javascript.component.scss
+++ b/src/app/projects-javascript/projects-javascript.component.scss
@@ -7,6 +7,15 @@
     height: 400px;
     background-size: cover;
     background-position: center;
+    transition: transform 0.35s ease-out;
+}
+
+.preview.sn-viewport--in {
+    animation: showAnimation 225ms ease-in;
+}
+
+.preview.sn-viewport--out {
+    opacity: 0;
 }
 
 .description {
