--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ html {
 
 body {
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: black;
     color: white;
 }
