--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,11 +3,10 @@
         <img src="assets/img/myimg2.jpg" class="introImg" snInViewport>
         <div class="introText" snInViewport>
             <h2>About Me</h2>
-            <p>I am 32 years old and am managing my own Taxi Limousine service based in Munich. After the pandemic
-                affected so strongly in my Life, I did decide to go back to my roots in IT. Over the last year, I built
-                a
-                variety of Front-End projects from simple websites to complex web apps. Now I'm looking for new
-                challenges in Front-End-Web development.</p>
+            <p>I am 32 year old IT professional. Over the last years, I managed my own Taxi Limousine service based in
+                Munich. During the pandemic, I did decide to go fully back to my roots into IT and work on software
+                development projects. Thus, over the last year, I built a variety of Front-End projects from simple
+                websites to complex web apps. Now I'm looking for new challenges in Front-End-Web development.</p>
         </div>
     </div>
     <div class="storySection">
@@ -19,8 +18,9 @@
         </div>
         <div class="storyPart" snInViewport>
             <img src="assets/img/heart-line.png">
-            <h3>2# Organized and Structured Work flow</h3>
-            <p>As an entrepreneur, I have gained experience in organized, structured, and self-reliant work.</p>
+            <h3>2# Self-Employment Journey</h3>
+            <p>Over the last years, I have gained a lot of experience in organized, structured, and self-reliant work
+                over a variety of sectors and challenges.</p>
         </div>
         <div class="storyPart" snInViewport>
             <img src="assets/img/search-line.png">
