--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -8,5 +8,5 @@
             <img src="assets/img/myimg1.jpg">
         </div>
     </div>
-    <div class="arrowBox" ><a href="#skills">&#709;</a></div>
 </div>
+<div class="arrowBox" snInViewport><a href="#skills">&#709;</a></div>
