--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -10,12 +10,12 @@
         object-fit: cover;
         border-radius: 50%;
     }
-    span:first-of-type {
-        color: #FA2759;
-    }
-    span:last-of-type {
-        color: #2DFCD8;
-    }
+    // span:first-of-type {
+    //     color: #FA2759;
+    // }
+    // span:last-of-type {
+    //     color: #2DFCD8;
+    // }
     a {
         padding: 20px 60px;
         text-decoration: none;
