update angular 12 -> 13, remove thisissoon

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,7 +1,7 @@
 <section id="skills" class="container">
     <h2>My Skills</h2>
     <div class="skillContainer">
-        <div *ngFor="let skill of skills" class="skillBoxes" snInViewport>
+        <div *ngFor="let skill of skills" class="skillBoxes">
             <div class="skillImgBox">
                 <img src="./assets/img/{{ skill.img }}">
             </div>
