chore: remove soon attri

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div id="about" class="container">
-    <div class="introBox" snInViewport>
-        <img src="assets/img/myimg2.jpg" class="introImg" snInViewport>
-        <div class="introText" snInViewport>
+    <div class="introBox">
+        <img src="assets/img/myimg2.jpg" class="introImg">
+        <div class="introText">
             <h2>About Me</h2>
             <p>I am 32 year old IT professional. Over the last years, I managed my own Taxi Limousine service based in
                 Munich. During the pandemic, I did decide to go fully back to my roots into IT and work on software
@@ -10,24 +10,24 @@
         </div>
     </div>
     <div class="storySection">
-        <div class="storyPart" snInViewport>
+        <div class="storyPart">
             <img src="assets/img/walk-line.png">
             <h3>#1 Start in the IT</h3>
             <p>In my apprenticeship as an information electronics technician, I gained a lot of experience in terms of
                 hardware and software.</p>
         </div>
-        <div class="storyPart" snInViewport>
+        <div class="storyPart">
             <img src="assets/img/heart-line.png">
             <h3>2# Self-Employment Journey</h3>
             <p>Over the last years, I have gained a lot of experience in organized, structured, and self-reliant work
                 over a variety of sectors and challenges.</p>
         </div>
-        <div class="storyPart" snInViewport>
+        <div class="storyPart">
             <img src="assets/img/search-line.png">
             <h3>3# Project experience</h3>
             <p>You can find everything from simple landing pages to complex web applications in my portfolio.</p>
         </div>
-        <div class="storyPart" snInViewport>
+        <div class="storyPart">
             <img src="assets/img/flight-takeoff-line.png">
             <h3>4# The next Challenge</h3>
             <p>I'm looking forward to contribute my knowledge of Javascript and Angular to your next project.</p>
