--- a/src/app/projects-angular/projects-angular.component.html
+++ b/src/app/projects-angular/projects-angular.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let p of projects"  id="{{ p.id }}" class="preview" snInViewport>
+<div *ngFor="let p of projects"  id="{{ p.id }}" class="preview">
     <div class="description">
         <h3>{{ p.name }}</h3>
         <p>{{ p.description }}</p>
