--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div id="portfolio" class="container">
-    <div class="headline" snInViewport>
+    <div class="headline">
         <h2>My Works</h2>
         <div class="lists">
             <button [class.active]="all" class="linkBox" (click)="showAll()">All</button>
