--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container" snInViewport>
+<div class="container">
     <div>
         <h2>Contact me.</h2>
         <p>Get in touch via the form below, or by emailing <a
