--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div style="height: 100vh">
+  <perfect-scrollbar>
+    <app-menu></app-menu>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </perfect-scrollbar>
+</div>
